--- a/index.css
+++ b/index.css
@@ -136,12 +136,32 @@
 .form__radio-field {
   border: none;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  height: 40px;
+  width: 100%;
 }
 
-.form__radio-container {
-  margin: 0 0 5px;
+.form__radio {
+  display: none;
 }
 
 .form__radio-label {
-  margin: 0;
+  margin: 0 0 5px;
+  display: inline-flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.form__custom-radio {
+  height: 1em;
+  width: 1em;
+  margin-right: 5px;
+  transform: scale(0);
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+}
+
+.form__radio:checked + .form__custom-radio {
+  background: black;
+  transform: scale(1)
 }
