--- a/index.css
+++ b/index.css
@@ -159,6 +159,7 @@
   margin-right: 5px;
   transform: scale(0);
   clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  transition: transform .2s ease-in-out ;
 }
 
 .form__radio:checked + .form__custom-radio {
